--- a/taxi/templates/index.html
+++ b/taxi/templates/index.html
@@ -6,7 +6,12 @@
 </head>
 <body>
 
-    <h1>taxi</h1>
+    <h1>taxi app</h1>
+
+    <ul>
+        <li><a href="{% url 'signup_manager' %}">create manger</a></li>
+        <li><a href="{% url 'signup_driver' %}">create driver</a></li>
+    </ul>
 
 </body>
 </html>
